2005-05-30  Timothy Brownawell  <tbrownaw@gmail.com>

	* lua.{cc,hh}: Replace note_netsync_commit with
	note_netsync_{revision,cert,pubkey}_received
	* packet.{cc,hh}: Callbacks for cert or key written to the database.
	* netsync.cc: Use said callbacks, call note_netsync_*_received hooks.
	* monotone.texi: Update documentation.

2005-05-30  Timothy Brownawell  <tbrownaw@gmail.com>

	* packet.{cc,hh}, netsync.cc: on_revision_written callback now takes
	the revision_id as an argument.
	* lua.{cc,hh}: New Lua hook, note_netsync_commit.
	* netsync.cc: At end of netsync session, call new hook for each
	revision received.
	monotone.texi: Document new hook.

2005-05-30  Matt Johnston  <matt@ucc.asn.au>

	* netsync.cc: cosmetic linebreak tidying for "double-check the
	fingerprint" message.
	* main.cc: make it clearer that "unknown type" refers to an exception
	* monotone.cc: catch early informative_failures (due to charset
	problems etc)

2005-05-30  Matt Johnston  <matt@ucc.asn.au>

	* tests/t_fmerge.at: scrap all the diff3/ed, just compare it with
	known-good output.

2005-05-30  Timothy Brownawell  <tbrownaw@gmail.com>

	* revision.cc (toposort): Better algorithm.

2005-05-30  Matt Johnston  <matt@ucc.asn.au>

	* tests/t_fmerge.at: make sure we write the file with the ed script.

2005-05-30  Matt Johnston  <matt@ucc.asn.au>

	* testsuite.at: use "command -v" rather than "which", since
	Solaris doesn't give useful exit codes for "which".
	* tests/t_fmerge.at: don't use --merge with diff3, pipe to ed instead
	so we don't rely on gnu diff3.

2005-05-29  Timothy Brownawell  <tbrownaw@gmail.com>

	* contrib/monoprof.sh: Add support for using valgrind for
	heap profiling.

2005-05-28  Joel Reed  <joelwreed@comcast.com>

	* app_state.cc, app_state.hh, commands.cc, monotone.cc, options.h:
	add new --depth command, and rename log's --depth to --last
	* monotone.texi: update documentation
	* tests/t_log_depth.at, tests/t_log_depth_single.at: update